test/sparse/types/testShared.good
./SparseTest.chpl:1: In function 'testSparse':
./SparseTest.chpl:9: error: sparse arrays of non-nilable classes are not currently supported
testShared.chpl:8: Function 'testSparse' instantiated as: testSparse(type t = shared T)
