test/sparse/types/testShared.chpl
import SparseTest;
class T {
  var value = 0;
}

type t = shared T;

SparseTest.testSparse(t);
